[gd_scene load_steps=7 format=3 uid="uid://b7or07ry36nim"]

[ext_resource type="Texture2D" uid="uid://dtgwwr4nmx8q0" path="res://graphics/enemies/scout.png" id="1_4gpkv"]
[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_6o7jo"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_mc01v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ybcdj"]
shader = ExtResource("2_mc01v")
shader_parameter/color = Color(0.30081, 0.664594, 0.799365, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_73aum"]
radius = 51.0882

[sub_resource type="CircleShape2D" id="CircleShape2D_cp1ps"]
radius = 651.001

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_6o7jo")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ybcdj")
position = Vector2(40, 26)
rotation = 1.5708
texture = ExtResource("1_4gpkv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_73aum")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_cp1ps")

[node name="LaserSpawnPositions" type="Node2D" parent="." groups=["Entity"]]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(120, -28)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(129, 11)

[node name="Timer" type="Node" parent="."]

[node name="LaserCooldown" type="Timer" parent="Timer"]
one_shot = true

[node name="DamageTimer" type="Timer" parent="Timer"]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timer/LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="Timer/DamageTimer" to="." method="_on_damage_timer_timeout"]
